@@ -5,9 +5,7 @@ import social.com.userservice.common.TimeProvider;
 import social.com.userservice.follow.model.Follow;
 import social.com.userservice.follow.repository.FollowRepository;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class FollowService {
@@ -31,11 +29,10 @@ public class FollowService {
     }
 
     public List<UUID> getUserFollowings(UUID userId) {
-        Optional<List<Follow>> byFollowerId = followRepository.findByFollowerId(userId);
-        if (byFollowerId.isEmpty()) {}
-
-        return byFollowerId.get().stream()
+        return followRepository.findByFollowerId(userId)
+                .orElse(List.of())
+                .stream()
                 .map(Follow::getFolloweeId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
